--- a/css/style.css
+++ b/css/style.css
@@ -7,4 +7,6 @@ body, html{
   width: 100%;
   height: 100%;
   position: relative;
+  background-color: #fff;
+  background: url(images/ajax-loader.gif) no-repeat center;
 }
